--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
 		"vite": "^6.3.5"
 	},
 	"type": "module",
-	"packageManger": "pnpm@10.11.0"
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"esbuild"
+		]
+	}
 }
